--- a/app/src/main/res/layout/activity_parent.xml
+++ b/app/src/main/res/layout/activity_parent.xml
@@ -150,15 +150,15 @@
             <include layout="@layout/t2_7_socail_security" />
 
             <!--TV 3 Byaktigat bibaran-->
-            <TextView
-                android:textAlignment="center"
-                android:background="@color/colorPrimary"
-                android:textColor="@color/colorWhiteText"
-                android:textSize="24sp"
-                android:padding="7dp"
-                android:text="व्यक्तिगत विवरण"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <!--<TextView-->
+                <!--android:textAlignment="center"-->
+                <!--android:background="@color/colorPrimary"-->
+                <!--android:textColor="@color/colorWhiteText"-->
+                <!--android:textSize="24sp"-->
+                <!--android:padding="7dp"-->
+                <!--android:text="व्यक्तिगत विवरण"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content" />-->
 
             <include layout="@layout/t3_bayktigat_bibaron"/>
 
