--- a/app/src/main/res/layout/xml_two_ten_to_twenty.xml
+++ b/app/src/main/res/layout/xml_two_ten_to_twenty.xml
@@ -148,6 +148,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
+                    android:id="@+id/d2_et_kitchen_nirman_barsa"
                     android:textSize="18dp"
                     android:padding="15dp"
                     android:textColorHint="@color/colorBlackText"
@@ -761,7 +762,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_gas_lasts_days"
+                    android:id="@+id/d2_et_gas_cylinder_tikne_din"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -788,7 +789,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_param_chulo_wood_rate"
+                    android:id="@+id/d2_et_old_chulo_ko_lagi_daaura_kg"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -807,7 +808,6 @@
 
 
                 <TextView
-
                     android:textColor="@color/colorBlackText"
                     android:textSize="18dp"
                     android:text="सुधारिएको चुल्होको लागि काठ गुइठा कति किलो प्रति महिना৴दाउरा  "
@@ -815,7 +815,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_sudhar_chulo_wood_rate"
+                    android:id="@+id/d2_et_modern_chulo_ko_lagi_daaura_kg"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -842,7 +842,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_kerosene_use"
+                    android:id="@+id/d2_et_mattitel_permonth_litre"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -868,7 +868,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_induction_use"
+                    android:id="@+id/d2_et_induction_heater_hoursperday"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -896,7 +896,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_oven_use"
+                    android:id="@+id/d2_et_oven_hoursperday"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -925,8 +925,6 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-
 
             <TextView
                 android:padding="3dp"
@@ -1031,7 +1029,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_gas_lasts_w_heat"
+                    android:id="@+id/d2_et_paani_tatauna_cylinderperyear"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -1058,7 +1056,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_param_chulo_wood_w_heat"
+                    android:id="@+id/d2_et_paani_tatauna_wood_kgpermonth_old_chulo"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -1085,7 +1083,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_sudhar_chulo_wood_w_heat"
+                    android:id="@+id/d2_et_paani_tatauna_wood_kgpermonth_modern"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -1112,7 +1110,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_kerosene_w_heat"
+                    android:id="@+id/d2_et_paani_tatauna_mattitel_permonth"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -1138,7 +1136,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_induction_w_heat"
+                    android:id="@+id/d2_et_paani_tatauna_induction_hoursperday"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -1166,7 +1164,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_oven_w_heat"
+                    android:id="@+id/d2_et_paani_tatauna_oven_hoursperday"
                     android:textAlignment="center"
                     android:inputType="number"
                     android:layout_width="match_parent"
@@ -1327,7 +1325,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_fan_count"
+                    android:id="@+id/d2_et_fan_count"
                     android:paddingLeft="20dp"
                     android:inputType="number"
                     android:textColorHint="@color/colorBlackText"
@@ -1336,7 +1334,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_fan_watt"
+                    android:id="@+id/d2_et_fan_watt"
                     android:paddingLeft="20dp"
                     android:inputType="number"
                     android:textColorHint="@color/colorBlackText"
@@ -1345,7 +1343,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_fan_hr"
+                    android:id="@+id/d2_et_fan_hoursperday"
                     android:paddingLeft="20dp"
                     android:inputType="number"
                     android:textColorHint="@color/colorBlackText"
@@ -1375,7 +1373,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_ac_count"
+                    android:id="@+id/d2_et_aircondition_count"
                     android:paddingLeft="20dp"
                     android:inputType="number"
                     android:textColorHint="@color/colorBlackText"
@@ -1384,7 +1382,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_ac_watt"
+                    android:id="@+id/d2_et_aircondition_watt"
                     android:paddingLeft="20dp"
                     android:inputType="number"
                     android:textColorHint="@color/colorBlackText"
@@ -1393,7 +1391,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_ac_hr"
+                    android:id="@+id/d2_et_aircondition_hoursperday"
                     android:paddingLeft="20dp"
                     android:inputType="number"
                     android:textColorHint="@color/colorBlackText"
@@ -1513,7 +1511,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/et_elec_unit_use"
+                    android:id="@+id/d2_et_bijuli_unit"
                     android:inputType="numberDecimal"
                     android:textAlignment="center"
                     android:layout_width="match_parent"
