--- a/app/src/main/res/layout/xml_two_three_jati_dharma.xml
+++ b/app/src/main/res/layout/xml_two_three_jati_dharma.xml
@@ -171,6 +171,7 @@
 
             <!--Surname-->
             <EditText
+                android:id="@+id/d2_et_thar"
                 android:padding="15dp"
                 android:textColorHint="@color/colorBlackText"
                 android:hint="थर"
