--- a/app/src/main/res/layout/xml_one_five_vada.xml
+++ b/app/src/main/res/layout/xml_one_five_vada.xml
@@ -17,8 +17,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
-
             <TextView
                 android:padding="3dp"
                 android:textSize="20sp"
@@ -35,6 +33,7 @@
 
 
             <EditText
+                android:id="@+id/d2_et_tenant_family_count"
                 android:padding="15dp"
                 android:textColorHint="@color/colorBlackText"
                 android:hint="भाडामा बस्ने जम्मा परिवार संख्या"
